--- a/src/components/Button_Sheet/Parent_ButtonSheet.css
+++ b/src/components/Button_Sheet/Parent_ButtonSheet.css
@@ -1,13 +1,48 @@
-.btnsheet_btn {
+body {
+  margin: 0;
+  padding: 0;
+}
+.main_parentbtnsheetdiv {
+  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+  height: 100vh;
+}
+.parentbtnsheetdiv {
+  padding-top: 40px;
+}
+.btn_opensheet {
   display: block;
-  padding: 10px 14px;
-  margin: 10px auto;
+  padding: 15px;
   border: none;
-  background-color: #4b5d67;
-  color: #f6fbf4;
+  background-color: #146356;
+  margin-top: 50px;
+  margin: auto;
+  border-radius: 12px;
+  color: white;
+  font-size: 15px;
   font-weight: bold;
   cursor: pointer;
 }
-.btnsheet_btn:hover {
-  box-shadow: 10px 5px 5px #4b5d67;
+.bottom-sheet-wrapper {
+  height: 100vh;
+  width: 100vw;
+  overflow-y: auto;
+}
+.bottom-sheet {
+  background: white;
+  border-radius: 20px 20px 0 0;
+  padding: 0 8px 16px 8px;
+  box-sizing: border-box;
+  position: fixed;
+  width: 50%;
+  top: calc(100% + 20px);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  user-select: none;
+  transition: all 0.3s ease;
+  transform: translateY(calc(0));
+  height: 250px;
+  margin-left: 25%;
+}
+
+.bottom-sheet.show {
+  transform: translateY(calc(-100% - 20px));
 }
