--- a/src/components/Button_Sheet/Parent_ButtonSheet.css
+++ b/src/components/Button_Sheet/Parent_ButtonSheet.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-.main_parentbtnsheetdiv {
+.parentbtnsheetdiv {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
   height: 100vh;
+  width: 100%;
 }
-.parentbtnsheetdiv {
-  padding-top: 40px;
+
+.bluring {
+  background: linear-gradient(0.25turn, #000000, #000000, #080400);
+  height: 100vh;
+  width: 100%;
+}
+.bluring::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  backdrop-filter: blur(8px);
+}
+.spacing{
+  padding-top: 50px;
 }
 .btn_opensheet {
   display: block;
